# plantwaterer

./: .gitignore  Cargo.toml  README.md
install/: build-and-install.sh  install-systemd.sh
src/: config.rs  controller.rs  main.rs  signals.rs  state.rs
src/hardware/: actuators.rs  mod.rs  platformpin.rs  pump.rs  relay.rs  relaypump.rs
systemd/: plantwaterer.service  plantwaterer.timer
