[package]
name = "plantwaterer"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
rppal = { version = "0.22.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.1"

[features]
gpio-real = ["rppal"]
gpio-mock = []

default = ["gpio-real"]

